# baseline-app-cookiecutter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cookiecutter.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pr.yml  test.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py
{{ cookiecutter.__package_name_kebab_case }}/: .pre-commit-config.yaml  pyproject.toml
{{ cookiecutter.__project_name_kebab_case }}/: .editorconfig  .env.example  .gitignore  .mcp-profile  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.dev.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
{{ cookiecutter.__project_name_kebab_case }}/.claude/: settings.json  settings.local.json
{{ cookiecutter.__project_name_kebab_case }}/.devcontainer/: devcontainer.json
{{ cookiecutter.__project_name_kebab_case }}/.github/: dependabot.yml  pull_request_template.md
{{ cookiecutter.__project_name_kebab_case }}/.github/workflows/: llm-scan.yml  pr.yml  teamwork.yml  test.yml
{{ cookiecutter.__project_name_kebab_case }}/docs/: index.md
{{ cookiecutter.__project_name_kebab_case }}/docs/decisions/: 0001-record-architecture-decisions.md  README.md
{{ cookiecutter.__project_name_kebab_case }}/docs/decisions/architecture/: 0000-analyse-initiale-du-projet.md
{{ cookiecutter.__project_name_kebab_case }}/scripts/: README.md  __init__.py
{{ cookiecutter.__project_name_kebab_case }}/src/app/: __init__.py  api.py  cli.py  config.py  dependencies.py
{{ cookiecutter.__project_name_kebab_case }}/src/app/v1/: __init__.py  api.py  dependencies.py
{{ cookiecutter.__project_name_kebab_case }}/src/persistance/: __init__.py  weaviate.py
{{ cookiecutter.__project_name_kebab_case }}/src/{{ cookiecutter.__project_name_snake_case }}/: __init__.py  api.py  cli.py  constants.py  models.py  service.py  services.py  settings.py  utils.py
{{ cookiecutter.__project_name_kebab_case }}/src/{{ cookiecutter.__project_name_snake_case }}/data_models/: models.py
{{ cookiecutter.__project_name_kebab_case }}/src/{{ cookiecutter.__project_name_snake_case }}/helpers/: __init__.py  vectorstore.py
{{ cookiecutter.__project_name_kebab_case }}/src/{{ cookiecutter.__project_name_snake_case }}/repositories/: __init__.py
{{ cookiecutter.__project_name_kebab_case }}/tests/: conftest.py  test_api.py  test_cli.py  test_import.py
{{ cookiecutter.__project_name_kebab_case }}/tests/features/: api.feature  cli.feature  import.feature
